k8s/local/2.frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: site15-local
  name: site15-frontend
  labels:
    app: site15-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: site15-frontend-container
  template:
    metadata:
      namespace: site15-local
      labels:
        pod: site15-frontend-container
    spec:
      containers:
        - name: site15-frontend
          image: site15/frontend:local
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 128Mi
              cpu: 500m
