k8s/local/2.static-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: site15-local
  name: site15-static
  labels:
    app: site15-static
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: site15-static-container
  template:
    metadata:
      namespace: site15-local
      labels:
        pod: site15-static-container
    spec:
      containers:
        - name: site15-static
          image: site15/static:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
