k8s/local/3.backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: site15-local
  name: site15-backend
  labels:
    app: site15-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: site15-backend-container
  template:
    metadata:
      namespace: site15-local
      labels:
        pod: site15-backend-container
    spec:
      containers:
        - name: site15-backend
          image: site15/backend:local
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 64Mi
              cpu: 75m
            limits:
              memory: 128Mi
              cpu: 150m
