k8s/local/4.static-service.yml
kind: Service
apiVersion: v1
metadata:
  namespace: site15-local
  name: site15-static-service
spec:
  selector:
    pod: site15-static-container
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
