k8s/local/7.backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: site15-local
  name: site15-backend-ingress
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-local
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: site15-backend-service
    nginx.org/websocket-services: site15-backend-service
spec:
  tls:
    - hosts:
        - localhost
      secretName: echo-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /site15/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: site15-backend-service
                port:
                  number: 5000
