k8s/local/7.server-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: site15-local
  name: site15-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-local"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$2
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/websocket-services: site15-server-service
    nginx.org/websocket-services: site15-server-service
spec:
  tls:
    - hosts:
        - localhost
      secretName: echo-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /site15/api(/|$)(.*)
            backend:
              serviceName: site15-server-service
              servicePort: 5000
